2007-01-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : corrected loop drawing

	* interfaces/R/igraph/R/plot.common.R (i.get.edge.lty) : added
	* interfaces/R/igraph/R/plot.R (plot.igraph) : edge.lty argument
	added, edge.color and edge.width handled well even if loops edges
	are present
	* interfaces/R/igraph/R/tkplot.R (tkplot) : edge.lty argument
	added
	
2007-01-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c.in (R_igraph_empty) : removed,
	this is now autogenerated
	* interface/R/igraph/R/interface.R (graph.empty) : removed,
	this is now autogenerated

2007-01-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/cliques.R (cliques, largest.cliques)
	(maximal.cliques, clique.number, independent.vertex.sets)
	(largest.independent.vertex.sets, maximal.independent.vertex.sets)
	(independence.number) : added
	* interfaces/R/src/rinterface.c (R_igraph_cliques)
	(R_igraph_largest_cliques, R_igraph_maximal_cliques)
	(R_igraph_clique_number, R_igraph_independent_vertex_sets)
	(R_igraph_largest_independent_vertex_sets)
	(R_igraph_maximal_independent_vertex_sets)
	(R_igraph_independence_number)

2006-12-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/iterators.R (V) : added 'innei' and 'outnei'
	shorthands

2006-12-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (graph.kcores: added
	* interfaces/R/src/rinterface.c (R_igraph_k_cores) : added

2006-12-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (connect.neighborhood) : added
	* interfaces/R/src/rinterface.c (R_igraph_connect_neighborhood) : 
	added

	* interfaces/R/igraph/R/games.R (rewire.edges, watts.strogatz.game) :
	added
	* interfaces/R/src/rinterface.c (R_igraph_rewire_edges)
	(R_igraph_watts_strogatz_game) : added

	* interfaces/R/igraph/R/games.R (rewire.edges) : typo corrected

2006-12-17  Gabor Csardi  <csardi@rmki.kfki.hu>
