@@ -1,10 +1,11 @@
-\name{graph.kcores}
-\alias{graph.kcores}
+\name{graph.coreness}
+\alias{graph.coreness}
 \title{K-core decomposition of graphs}
 \description{The k-core of graph is a maximal subgraph in which each
-  vertex has at least degree k.}
+  vertex has at least degree k. The coreness of a vertex is k if it
+  belongs to the k-core but not to the (k+1)-core.}
 \usage{
-graph.kcores(graph, mode="all")
+graph.coreness(graph, mode="all")
 }
 \arguments{
   \item{graph}{The input graph, it can be directed or undirected}
@@ -19,18 +20,16 @@ graph.kcores(graph, mode="all")
   has at least degree k. The cores of a graph form layers: the (k+1)-core
   is always a subgraph of the k-core.
 
-  This function calculates the order for each vertex: the
-  maximum order of a core in which it is included.
+  This function calculates the coreness for each vertex.
 }
 \value{
-  Numeric vector of integer numbers giving the order of each vertex.
+  Numeric vector of integer numbers giving the coreness of each vertex.
 }
 \references{Vladimir Batagelj, Matjaz Zaversnik: An O(m)
   Algorithm for Cores Decomposition of Networks, 2002
   
   Seidman S. B. (1983) Network structure and minimum degree, \emph{Social
     Networks}, 5, 269--287.
-
 }
 \author{Gabor Csardi \email{csardi@rmki.kfki.hu}}
 \seealso{\code{\link{degree}}}
