@@ -4921,7 +4921,7 @@ SEXP R_igraph_watts_strogatz_game(SEXP pdim, SEXP psize, SEXP pnei, SEXP pp) {
   return result;
 }
 
-SEXP R_igraph_k_cores(SEXP graph, SEXP pmode) {
+SEXP R_igraph_coreness(SEXP graph, SEXP pmode) {
   
   igraph_t g;
   igraph_integer_t mode=REAL(pmode)[0];
@@ -4932,7 +4932,7 @@ SEXP R_igraph_k_cores(SEXP graph, SEXP pmode) {
   
   R_SEXP_to_igraph(graph, &g);
   igraph_vector_init(&res, 0);
-  igraph_k_cores(&g, &res, mode);
+  igraph_coreness(&g, &res, mode);
   
   PROTECT(result=NEW_NUMERIC(igraph_vector_size(&res)));
   igraph_vector_copy_to(&res, REAL(result));
